# davidfialho533.github.io

./: 404.html  README.md  index.html
css/: style.css
dashboard-vendas/: .env.example  README.md  app.py  database.py  pyproject.toml  seed_vendas.py
js/: main.js
