[tool.poetry]
name = "dashboard-vendas"
version = "0.1.0"
description = "Dashboard de vendas com Streamlit e MySQL"
authors = ["David Fialho"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.2"
scikit-learn = "^1.5.0"
streamlit = "1.36.0"
matplotlib = "^3.9.0"
pymysql = "^1.1.0"
sqlalchemy = "^2.0.0"
python-dotenv = "^1.0.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
